force-app/main/default/objects/Contact/fields/LIS_Eligibility__c.field-meta.xml
<CustomField>
    <fullName>LIS_Eligibility__c</fullName>
    <defaultValue>false</defaultValue>
    <label>LIS Eligibility</label>
    <type>Checkbox</type>
</CustomField>