force-app/main/default/objects/Contact/fields/MBI_Number__c.field-meta.xml
<CustomField>
    <fullName>MBI_Number__c</fullName>
    <label>MBI Number</label>
    <length>11</length>
    <type>Text</type>
</CustomField>