force-app/main/default/objects/Contact/fields/Part_A_Effective_Date__c.field-meta.xml
<CustomField>
    <fullName>Part_A_Effective_Date__c</fullName>
    <label>Part A Effective Date</label>
    <type>Date</type>
</CustomField>