force-app/main/default/objects/Contact/fields/Part_B_Effective_Date__c.field-meta.xml
<CustomField>
    <fullName>Part_B_Effective_Date__c</fullName>
    <label>Part B Effective Date</label>
    <type>Date</type>
</CustomField>