force-app/main/default/objects/Contact/fields/Visa_Status__c.field-meta.xml
<CustomField>
    <fullName>Visa_Status__c</fullName>
    <description>Identifies the individual’s current citizenship or residency status for compliance, reporting, and eligibility purposes. Used to distinguish whether the contact is a U.S. citizen, permanent resident (Green Card holder), or holds a visa.</description>
    <inlineHelpText>Select the contact’s current citizenship or residency status:
	•	US Citizen – The person holds U.S. citizenship.
	•	Green Card – The person is a lawful permanent resident.
	•	Visa – The person is in the U.S. on a temporary visa.
	•	N/A – Not applicable or information not provided.</inlineHelpText>
    <label>Visa Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>US Citizen</fullName>
            </value>
            <value>
                <fullName>Green Card</fullName>
            </value>
            <value>
                <fullName>Visa</fullName>
            </value>
            <value>
                <fullName>N/A</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>